Update RubyMine section with current docs link
Replace the stale 2017.1 reference and download link with a link to
the current RuboCop integration docs.

--- a/docs/modules/ROOT/pages/integration_with_other_tools.adoc
+++ b/docs/modules/ROOT/pages/integration_with_other_tools.adoc
@@ -74,7 +74,7 @@ Installation instructions can be found https://github.com/mrdougal/textmate2-rub
 
 === RubyMine / Intellij IDEA
 
-RuboCop support is https://www.jetbrains.com/idea/download/other.html[available] as of the 2017.1 releases.
+RuboCop support is https://www.jetbrains.com/help/ruby/rubocop.html[built-in].
 
 === Visual Studio Code
 
