Replace HoundCI reference with Codacy in index page
HoundCI shut down in 2022. Use Codacy as an example instead.

--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -24,7 +24,7 @@ linter:
 * It's easy to extend RuboCop with custom cops and formatters
 * A vast number of ready-made xref:extensions.adoc[extensions] (e.g. `rubocop-rails`, `rubocop-rspec`, `rubocop-performance` and `rubocop-minitest`)
 * Wide editor/IDE support
-* Many online services use RuboCop internally (e.g. HoundCI and CodeClimate)
+* Many online services use RuboCop internally (e.g. CodeClimate and Codacy)
 * Best logo/stickers ever
 
 The project is closely tied to several efforts to document and promote the best practices of the Ruby community:
