Remove "experimental" language from LSP docs
The built-in LSP has been stable for 30+ releases since its
introduction in 1.53.

--- a/docs/modules/ROOT/pages/usage/lsp.adoc
+++ b/docs/modules/ROOT/pages/usage/lsp.adoc
@@ -1,6 +1,6 @@
 = LSP (Language Server Protocol)
 
-NOTE: The built-in language server was introduced in RuboCop 1.53. This experimental feature has been under consideration for a while.
+NOTE: The built-in language server was introduced in RuboCop 1.53.
 
 https://microsoft.github.io/language-server-protocol/[The Language Server Protocol] is the modern standard for providing cross-editor support for various programming languages.
 
