Remove redundant .freeze from example in development docs
The example file has frozen_string_literal: true, making the explicit
.freeze on string constants unnecessary and potentially confusing for
new contributors.

--- a/docs/modules/ROOT/pages/development.adoc
+++ b/docs/modules/ROOT/pages/development.adoc
@@ -240,7 +240,7 @@ module RuboCop
       #   array.any?
       #
       class SimplifyNotEmptyWithAny < Base
-        MSG = 'Use `.any?` and remove the negation part.'.freeze
+        MSG = 'Use `.any?` and remove the negation part.'
         RESTRICT_ON_SEND = [:!].freeze # optimization: don't call `on_send` unless
                                        # the method name is in this list
 
