--- a/docs/modules/ROOT/pages/compatibility.adoc
+++ b/docs/modules/ROOT/pages/compatibility.adoc
@@ -40,7 +40,7 @@ The following table is the runtime support matrix.
 
 RuboCop targets Ruby 2.0+ code analysis with Parser gem as a parser since RuboCop 1.30. It restored code analysis support that had been removed earlier by mistake, together with dropping runtime support for unsupported Ruby versions.
 
-Starting from RuboCop 1.62, support for Prism's translation layer will allow analysis of Ruby 3.3+ with the `prism` gem.
+Starting from RuboCop 1.62, Prism's translation layer allows analysis of Ruby 3.3+ with the `prism` gem.
 
 Starting from RuboCop 1.75, the `prism` translation layer is used by default when analyzing Ruby 3.4+.
 
