Fix outdated GitHub docs link for personal access tokens

--- a/docs/modules/ROOT/pages/configuration.adoc
+++ b/docs/modules/ROOT/pages/configuration.adoc
@@ -164,7 +164,7 @@ inherit_from:
   - http://<user_name>:<password>@raw.githubusercontent.com/example/rubocop.yml
 ----
 
-A link:https://docs.github.com/en/developers/apps/about-apps#personal-access-token[GitHub personal access token]
+A link:https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens[GitHub personal access token]
 can also be configured as follows:
 
 [source,yaml]
