Extract source code directives into their own page
Move the disable/enable/todo and push/pop directive documentation out
of the configuration page into a dedicated usage/source_code_directives
page. These are usage topics about annotating source code, not
configuration file settings.

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -8,6 +8,7 @@
 ** xref:usage/lsp.adoc[LSP]
 ** xref:usage/mcp.adoc[MCP]
 ** xref:usage/server.adoc[Server]
+** xref:usage/source_code_directives.adoc[Source Code Directives]
 ** xref:usage/profiling.adoc[Profiling]
 * xref:configuration.adoc[Configuration]
 * xref:cops.adoc[Cops]
