Add Getting Started guide
A concise tutorial that walks new users through their first run,
project setup, basic configuration, autocorrect, and editor
integration. Links out to the reference pages for details.

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -2,6 +2,7 @@
 * xref:installation.adoc[Installation]
 * xref:compatibility.adoc[Compatibility]
 * Usage
+** xref:usage/getting_started.adoc[Getting Started]
 ** xref:usage/basic_usage.adoc[Basic Usage]
 ** xref:usage/auto_gen_config.adoc[Auto-generating Configuration]
 ** xref:usage/autocorrect.adoc[Autocorrect]
