--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -54,8 +54,8 @@ style preferences you have RuboCop is there for you. That's our promises and our
 So, what to do next? While you can peruse the documentation in whatever way you'd like, here are
 a few recommendations:
 
-* See xref:usage/basic_usage.adoc["Basic Usage"] to get yourself familiar with RuboCop's
-capabilities.
+* Start with the xref:usage/getting_started.adoc["Getting Started"] guide to get up and running quickly.
+* See xref:usage/basic_usage.adoc["Basic Usage"] for the full CLI reference.
 * Adjust RuboCop to your style/preferences. RuboCop is an extremely flexible tool and most aspects of its behavior
 can be tweaked via various https://github.com/rubocop/rubocop/blob/master/config/default.yml[configuration
 options]. See xref:configuration.adoc["Configuration"] for more details.
