Rename 'Basic Usage' to 'CLI Reference' and add Getting Started intro
The old Basic Usage page mixed tutorial content with CLI reference material.
Move the introductory "three roles" framing to Getting Started and rename
the page to CLI Reference, which better reflects its content. Update all
cross-references.

--- a/docs/modules/ROOT/nav.adoc
+++ b/docs/modules/ROOT/nav.adoc
@@ -3,7 +3,7 @@
 * xref:compatibility.adoc[Compatibility]
 * Usage
 ** xref:usage/getting_started.adoc[Getting Started]
-** xref:usage/basic_usage.adoc[Basic Usage]
+** xref:usage/basic_usage.adoc[CLI Reference]
 ** xref:usage/auto_gen_config.adoc[Auto-generating Configuration]
 ** xref:usage/autocorrect.adoc[Autocorrect]
 ** xref:usage/caching.adoc[Caching]
