--- a/docs/modules/ROOT/pages/usage/basic_usage.adoc
+++ b/docs/modules/ROOT/pages/usage/basic_usage.adoc
@@ -1,114 +1,6 @@
-= Basic Usage
+= CLI Reference
 
-RuboCop has three primary uses:
-
-. Code style checker (a.k.a. linter)
-. A replacement for `ruby -w` (a subset of its linting capabilities)
-. Code formatter
-
-In the next sections we'll briefly cover all of them.
-
-== Code style checker
-
-Running `rubocop` with no arguments will check all Ruby source files
-in the current directory:
-
-[source,sh]
-----
-$ rubocop
-----
-
-Alternatively you can pass `rubocop` a list of files and directories to check:
-
-[source,sh]
-----
-$ rubocop app spec lib/something.rb
-----
-
-Here's RuboCop in action. Consider the following Ruby source code:
-
-[source,ruby]
-----
-def badName
-  if something
-    test
-    end
-end
-----
-
-Running RuboCop on it (assuming it's in a file named `test.rb`) would produce the following report:
-
-----
-Inspecting 1 file
-W
-
-Offenses:
-
-test.rb:1:1: C: Style/FrozenStringLiteralComment: Missing magic comment # frozen_string_literal: true.
-def badName
-^
-test.rb:1:5: C: Naming/MethodName: Use snake_case for method names.
-def badName
-    ^^^^^^^
-test.rb:2:3: C: Style/GuardClause: Use a guard clause instead of wrapping the code inside a conditional expression.
-  if something
-  ^^
-test.rb:2:3: C: Style/IfUnlessModifier: Favor modifier if usage when having a single-line body. Another good alternative is the usage of control flow &&/||.
-  if something
-  ^^
-test.rb:4:5: W: Layout/EndAlignment: end at 4, 4 is not aligned with if at 2, 2.
-    end
-    ^^^
-
-1 file inspected, 5 offenses detected
-----
-
-=== Autocorrecting offenses
-
-You can also run RuboCop in an autocorrect mode, where it will try to
-automatically fix the problems it found in your code:
-
-[source,sh]
-----
-$ rubocop -a
-# or
-$ rubocop --autocorrect
-----
-
-TIP: See xref:usage/autocorrect.adoc[Autocorrect] for more details.
-
-=== Changing what RuboCop considers to be offenses
-
-RuboCop comes with a preconfigured set of rules for each of its cops, based on the https://rubystyle.guide[Ruby Style Guide].
-Depending on your project, you may wish to reconfigure a cop, tell to ignore certain files, or disable it altogether.
-
-The most common way to change RuboCop's behavior is to create a configuration file named `.rubocop.yml` in the
-project's root directory.
-
-For more information, see xref:configuration.adoc[Configuration].
-
-== RuboCop as a replacement for `ruby -w`
-
-RuboCop natively implements almost all `ruby -w` lint warning checks, and then some. If you want you can use RuboCop
-simply as a replacement for `ruby -w`:
-
-[source,sh]
-----
-$ rubocop -l
-# or
-$ rubocop --lint
-----
-
-== RuboCop as a formatter
-
-There's a handy shortcut to run autocorrection only on code layout (a.k.a. formatting) offenses:
-
-[source,sh]
-----
-$ rubocop -x
-# or
-$ rubocop --fix-layout
-----
+Full reference for the `rubocop` command-line interface. For a tutorial introduction, see xref:usage/getting_started.adoc[Getting Started].
 
 == Command-line flags
 
